--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
 
   <body class="text-center">
     <form class="form-signin" action="/" method="post">
-      <img class="mb-4" src="images/Sid.jpg" alt="" width="72" height="72">
+      <img class="mb-4" src="Public/images/Sid.jpg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Signup to my Newsletter!</h1>
 
       <input type="text" class="form-control top" name="fName" placeholder="First Name" required autofocus>
